src/css/custom.css
/* ... */
.panel-group .panel + .panel {
	margin-top: 0;
}
.panel-default > .panel-heading {
	background-color: transparent;
	border-color: transparent;
	border-radius: 0;
	padding: 0;
}
.panel-title {
	font-size: 14px;
	font-size: 1.4rem;
	font-weight: 900;
	text-transform: uppercase;
}
.panel-title > a {
	background-color: #fff;
	border-bottom: 1px solid #ecf0f1;
	color: #34495e;
	display: block;
	padding: 10px 15px;
}
.panel-title > a.collapsed {
	background-color: #ecf0f1;
	border-bottom: 1px solid #ddd;
	color: #bdc3c7;
}
.panel-default>.panel-heading+.panel-collapse .panel-body {
	border-bottom: 1px solid #ddd;
	border-top-color: transparent;
}

/* Modal */
.modal {
	z-index: 1070;
}
.modal-backdrop {
	z-index: 1060;
}
.modal-content {
	border: none;
	border-radius: 10px;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
		-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}
.modal-header {
	background-color: #34495e;
	border-bottom: none;
	border-radius: 6px 6px 0 0;
	padding: 10px 12px;
}
.modal-title {
	color: #fff;
	font-size: 12px;
	font-size: 1.2rem;
	font-weight: 700;
	text-transform: uppercase;
}
.modal-header .close {
	color: #fff;
	font-size: 30px;
	font-size: 3rem;
	font-weight: 700;
	margin-top: -8px;
	opacity: 0.3;
		filter: alpha(opacity=30);
	text-shadow: none;
	transition: all 0.3s ease;
		-moz-transition: all 0.3s ease;
        -ms-transition: all 0.3s ease;
        -o-transition: all 0.3s ease;
		-webkit-transition: all 0.3s ease;
}
.modal-header .close:hover {
	opacity: 0.5;
		filter: alpha(opacity=50);
	transition: all 0.3s ease;
		-moz-transition: all 0.3s ease;
        -ms-transition: all 0.3s ease;
        -o-transition: all 0.3s ease;
		-webkit-transition: all 0.3s ease;
}
.modal-body {
	padding: 12px;
}
.modal .block-title {
	margin-bottom: 10px;
}
.modal .block-title h5 {
	font-size: 12px;
	font-size: 1.2rem;
	font-weight: 700;
	text-transform: uppercase;
}
.modal .input-block {
	margin-bottom: 10px;
	padding: 0;
}
.modal-footer {
	background-color: #ecf0f1;
	border-radius: 0 0 6px 6px;
	border-top: none;
	margin-top: 0;
	padding: 7px;
}
#modalNote textarea.form-control {
	min-height: 120px;
}
.modal .alert {
	padding: 8px 15px;
}

.my-drop-zone { border: dotted 3px lightgray; }
.ng-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
.another-file-over-class { border: dotted 3px green; }


/* Mobile devices (mobile, 540px and up) */
@media (min-width: 540px) {
	.global-notification-bar{
		margin-top: 5px;
		padding: 5px 10px;

	}

	.toothchart-wrapper {
		overflow-x: hidden;
	}

    .modal-sm {
        width: 300px;
    }
}
/* Mobile devices (mobile, 620px and up) */
@media (min-width: 620px) {
	.global-notification-bar{
		margin-top: 5px;
		padding: 5px 10px;

	}

	.table-container {
		overflow-x: hidden;
	}
	.table {
		width: 100%;
	}
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {

	.global-notification-bar{
		margin-top: 7px;
		margin-left: 175px;
		max-width: 370px;
		min-width: 370px;
		padding: 5px 10px;
	}

	.navbar-nav {
		margin: 0;
		position: absolute;
		right: 0;
		top: 0;
		width: 65%;
	}
	.navbar-nav > li {
		float: none;
	}
	.navbar-nav > li > a {
		float: right;
		padding-bottom: 10px;
		padding-top: 10px;
		text-align: right;
	}

    .navbar .powered-by {
        margin-top: 60px;
    }
    .navbar .powered-by img {
        height: 55px;
    }

	.page-header {
		text-align: left;
	}
    .box-padded {
        padding: 20px;
    }
	.box-white + .button-block .btn {
		display: inline-block;
		padding: 12px 70px;
		width: auto;
	}
	.input-block {
		padding: 0 15px 20px;
	}

	.upper-chart li.tooth-button {
		margin-left: 10px;
	}
	.lower-chart li.tooth-button {
		margin-right: 10px;
	}

	#toothchart {
		width: 100%;
	}
	.tooth-button {
		height: 30px;
		width: 30px;
	}
	.tooth-button label {
		font-size: 14px;
		font-size: 1.4rem;
	}
	.attachment-block {
		display: inline-block;
		width: 200px;
	}
	li.attachment-block:nth-child(3n+0) {
		margin-right: 0;
	}
	.note-block > span {
		display: inline-block;
		vertical-align: top;
	}
	.note-block .note-content {
		width: 60%;
	}
	.note-block .note-user {
		margin-right: 2%;
		width: 15%;
	}
	.note-block .note-more {
		margin-left: 4%;
		cursor: pointer;
		width: 6%;
	}
	.note-block .note-more:hover {
		text-decoration: underline;
	}
	.note-block .datestamp {
		width: 10.5%;
	}
	.filter-controls-block {
		padding: 20px 40px;
		position: relative;
	}
	.filter-controls-block .date-range-picker, .filter-controls-block .input-block {
		padding: 0;
	}
	.filter-controls-block .results-block {
		border-radius: 20px;
		left: 50%;
		margin-left: -100px;
		position: absolute;
		top: 20px;
		width: 200px;
	}
	.table-wrapper {
		padding: 0 40px;
	}
	.table {
		width: 100%;
	}
	.modal-header {
		padding: 19px 30px;
	}
	.modal-title {
		font-size: 16px;
		font-size: 1.6rem;
	}
	.modal-header .close {
	margin-top: -5px;
	}
	.modal-body {
		padding: 40px 30px;
	}
	.modal .block-title {
		margin-bottom: 20px;
	}
	.modal .block-title h5 {
		font-size: 14px;
		font-size: 1.4rem;
	}
	.responsive-tab-content .tab-content {
		padding: 15px;
}
	#sectPersonal.section-block, #sectPayment.section-block {
		padding: 15px 5px 0;
	}

	#sectPayment select {
		display: inline-block;
		margin-left: 20px;
		padding-left: 10px;
		padding-right: 10px;
		width: 310px;
	}
}
/* ... */

